[JIRA-7821] Fix CallItem overflow issue

--- a/packages/ringcentral-widgets/components/ActionMenuList/styles.scss
+++ b/packages/ringcentral-widgets/components/ActionMenuList/styles.scss
@@ -2,8 +2,7 @@
 
 .root {
   display: block;
-  // margin: 5px 20px 15px 36px;
-  margin: 0 20px 15px 43px;
+  margin: 0 20px 15px 42px;
   height: 36px;
   line-height: 34px;
   padding: 0 15px;
